All_Component_DX/force-app/main/default/objects/Service_Template__c/fields/All_Services_Covered__c.field-meta.xml
<CustomField>
    <fullName>All_Services_Covered__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag indicates if all services performed will be covered by this warranty. This flag does not drive any functionality in ServiceMax and is for informational purposes only</description>
    <inlineHelpText>Flag indicates if all services performed will be covered by this warranty. This flag does not drive any functionality in ServiceMax and is for informational purposes only</inlineHelpText>
    <label>All Services Covered(DO NOT USE)</label>
    <type>Checkbox</type>
</CustomField>