All_Component_DX/force-app/main/default/objects/Service_Template__c/fields/Duration_of_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Duration_of_Expenses__c</fullName>
    <description>A number indicating the duration of coverage for expenses</description>
    <inlineHelpText>A number indicating the duration of coverage for expenses</inlineHelpText>
    <label>Duration of Expenses Coverage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>