All_Component_DX/force-app/main/default/objects/Service_Template__c/fields/Duration_of_Time_Coverage__c.field-meta.xml
<CustomField>
    <fullName>Duration_of_Time_Coverage__c</fullName>
    <description>A number indicating the duration of coverage for labor</description>
    <inlineHelpText>A number indicating the duration of coverage for labor.</inlineHelpText>
    <label>Duration of Labor Coverage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>