All_Component_DX/force-app/main/default/objects/Service_Template__c/fields/Exclusions__c.field-meta.xml
<CustomField>
    <fullName>Exclusions__c</fullName>
    <description>A free format text to define any exceptions not covered by the standard coverage of the template</description>
    <inlineHelpText>Define any exceptions not covered by the standard coverage of the template</inlineHelpText>
    <label>Exclusions</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>