All_Component_DX/force-app/main/default/objects/Service_Template__c/fields/Invoice_Required__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag indicates if an invoice is always raised at the end of service delivery. This flag does not drive any functionality in ServiceMax and is for informational purposes only</description>
    <inlineHelpText>Flag indicates if an invoice is always raised at the end of service delivery. This flag does not drive any functionality in ServiceMax and is for informational purposes only</inlineHelpText>
    <label>Invoice Required</label>
    <type>Checkbox</type>
</CustomField>