All_Component_DX/force-app/main/default/objects/Service_Template__c/fields/Loaner_Provided__c.field-meta.xml
<CustomField>
    <fullName>Loaner_Provided__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag indicates if customer is given a temporary replacement product when the covered product is under repair. This flag does not drive any functionality in ServiceMax and is for informational purposes only</description>
    <inlineHelpText>Flag indicates if customer is given a temporary replacement product when the covered product is under repair. This flag does not drive any functionality in ServiceMax and is for informational purposes only</inlineHelpText>
    <label>Loaner Provided</label>
    <type>Checkbox</type>
</CustomField>