All_Component_DX/force-app/main/default/objects/Service_Template__c/fields/Template_Type__c.field-meta.xml
<CustomField>
    <fullName>Template_Type__c</fullName>
    <description>Indicates if this template is used for warranty calculation or referred in service contracts. When creating warranty for installed products, only templates with type Warranty are considered</description>
    <inlineHelpText>Indicates if this template is used for warranty calculation or used as a reference in service contracts. When creating warranty for installed products, only templates with type Warranty are considered</inlineHelpText>
    <label>Template Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Warranty</fullName>
                <default>true</default>
                <label>Warranty</label>
            </value>
            <value>
                <fullName>Service Contract</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>