All_Component_DX/force-app/main/default/objects/Service_Template__c/fields/Time_Covered__c.field-meta.xml
<CustomField>
    <fullName>Time_Covered__c</fullName>
    <description>A number between 1 and 100 indicating the percentage of coverage on labor</description>
    <inlineHelpText>A number between 1 and 100 indicating the percentage of coverage on labor</inlineHelpText>
    <label>Labor % Covered</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>