All_Component_DX/force-app/main/default/objects/Service_Template__c/fields/Unit_of_Time_Material__c.field-meta.xml
<CustomField>
    <fullName>Unit_of_Time_Material__c</fullName>
    <description>Combined with duration of coverage, this qualifies the material coverage duration in days, weeks, months or years</description>
    <inlineHelpText>Combined with duration of coverage, this qualifies the material coverage duration in days, weeks, months or years</inlineHelpText>
    <label>Unit of Time for Material Coverage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Days</fullName>
            </value>
            <value>
                <fullName>Weeks</fullName>
            </value>
            <value>
                <fullName>Months</fullName>
            </value>
            <value>
                <fullName>Years</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>