All_Component_DX/force-app/main/default/objects/Service_Template__c/validationRules/Expenses_Duration_UoT_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Expenses_Duration_UoT_Check</fullName>
    <active>true</active>
    <description>If Expenses coverage % is specified, duration and unit of time should be specified too.</description>
    <errorConditionFormula>AND(NOT ISNULL( Expenses_Covered__c ), OR( ISNULL(  Duration_of_Expenses__c ), ISPICKVAL(  Unit_of_Time_Expenses__c , &quot;&quot;)))</errorConditionFormula>
    <errorDisplayField>Unit_of_Time_Expenses__c</errorDisplayField>
    <errorMessage>Please specify the duration and unit of time of Expenses coverage.</errorMessage>
</ValidationRule>