All_Component_DX/force-app/main/default/objects/Service_Template__c/validationRules/Labor_Duration_UoT_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Labor_Duration_UoT_Check</fullName>
    <active>true</active>
    <description>If Labor coverage % is specified, duration and unit of time should be specified too.</description>
    <errorConditionFormula>AND(NOT ISNULL( Time_Covered__c ), OR( ISNULL(  Duration_of_Time_Coverage__c ), ISPICKVAL(  Unit_of_Time__c, &quot;&quot;)))</errorConditionFormula>
    <errorDisplayField>Unit_of_Time__c</errorDisplayField>
    <errorMessage>Please specify the duration and unit of time of Labor coverage.</errorMessage>
</ValidationRule>