All_Component_DX/force-app/main/default/objects/Service_Template__c/listViews/All_Warranty_Terms.listView-meta.xml
<ListView>
    <fullName>All_Warranty_Terms</fullName>
    <columns>NAME</columns>
    <columns>Coverage_Effective_From2__c</columns>
    <columns>Material_Covered__c</columns>
    <columns>Time_Covered__c</columns>
    <columns>Expenses_Covered__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All Warranty Terms</label>
    <language>en_US</language>
</ListView>